--- a/index.html
+++ b/index.html
@@ -230,23 +230,43 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Libraries</div>
+        <div class="subheading mb-3">Research</div>
         	<ul class="fa-ul mb-0">
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
-	            	Keras
+	            	Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free)
 	          	</li>
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
-	            	Pytorch
+	            	Contour Detection
 	          	</li>
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
-	            	D3
-	          	</li>	          	
+	            	Object Localization
+	          	</li>	
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Semantic Image Segmentation
+	          	</li>	
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Unsupervised Learning
+	          	</li>	
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Time-Series Analysis
+	          	</li>	
 	      	</ul>
 
-        <div class="subheading mb-3">Programming Languages & Tools</div>
+	<div class="subheading mb-3">Version Control</div>
+        	<ul class="fa-ul mb-0">
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Git
+	          	</li>     		
+	      	</ul>
+	      
+        <div class="subheading mb-3">Language</div>
         	<ul class="fa-ul mb-0">
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
@@ -254,31 +274,102 @@
 	          	</li>
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
-	            	Matlab
+	            	Java
 	          	</li>	          	
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
-	            	Java
+	            	C++
 	          	</li>
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
-	            	Tableau
-	          	</li>         		
-	      	</ul>
-
-        <div class="subheading mb-3">Web Development</div>
-        	<ul class="fa-ul mb-0">
-	          	<li>
+	            	C
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	SQL
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	JavaScript
+	          	</li>
+			<li>
 	            	<i class="fa-li fa fa-check"></i>
 	            	HTML
 	          	</li>
-	          	<li>
+			<li>
 	            	<i class="fa-li fa fa-check"></i>
 	            	CSS
+	          	</li>
+	      	</ul>
+
+        <div class="subheading mb-3">Library</div>
+        	<ul class="fa-ul mb-0">
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Pytorch
+	          	</li>
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Keras
 	          	</li>	          		          	
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
-	            	Javascript
+	            	Pandas
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Scikit-learn
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	OpenCV
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Apache Spark MLlib
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Seaborn
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Flask
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	D3.js
+	          	</li>
+	      	</ul>
+	<div class="subheading mb-3">Technology</div>
+        	<ul class="fa-ul mb-0">
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Google Cloud Platform (GCP)
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Microsoft Azure
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Docker
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Apache Spark
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Tableau
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Matlab
+	          	</li>
+			<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	ClickUp
 	          	</li>
 	      	</ul>
 
