--- a/index.html
+++ b/index.html
@@ -231,6 +231,14 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Research</div>
+	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &bull; 
+		Contour Detection &bull;
+		Object Localization &bull;
+		Semantic Image Segmentation &bull;
+		Unsupervised Learning &bull;
+		Time-Series Analysis
+	    </p>
+	    <!--
         	<ul class="fa-ul mb-0">
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
@@ -257,6 +265,7 @@
 	            	Time-Series Analysis
 	          	</li>	
 	      	</ul>
+	    -->
 
 	<div class="subheading mb-3">Version Control</div>
         	<ul class="fa-ul mb-0">
