--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Research</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &bull; 
-		Contour Detection &bull;
-		Object Localization &bull;
-		Semantic Image Segmentation &bull;
-		Unsupervised Learning &bull;
+	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &#x25cf;; 
+		Contour Detection &#x25cf;;
+		Object Localization &#x25cf;;
+		Semantic Image Segmentation &#x25cf;;
+		Unsupervised Learning &#x25cf;;
 		Time-Series Analysis
 	    </p>
 	    <!--
