--- a/index.html
+++ b/index.html
@@ -231,43 +231,17 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Research</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &#x25cf;; 
-		Contour Detection &#x25cf;;
-		Object Localization &#x25cf;;
-		Semantic Image Segmentation &#x25cf;;
-		Unsupervised Learning &#x25cf;;
+	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &#x25cf; 
+		Contour Detection &#x25cf;
+		Object Localization &#x25cf;
+		Semantic Image Segmentation &#x25cf;
+		Unsupervised Learning &#x25cf;
 		Time-Series Analysis
 	    </p>
-	    <!--
-        	<ul class="fa-ul mb-0">
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free)
-	          	</li>
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Contour Detection
-	          	</li>
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Object Localization
-	          	</li>	
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Semantic Image Segmentation
-	          	</li>	
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Unsupervised Learning
-	          	</li>	
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Time-Series Analysis
-	          	</li>	
-	      	</ul>
-	    -->
 
 	<div class="subheading mb-3">Version Control</div>
+	    <p class="lead mb-5"  style="text-align: justify;"> Git 
+	    </p>
         	<ul class="fa-ul mb-0">
 	          	<li>
 	            	<i class="fa-li fa fa-check"></i>
@@ -276,111 +250,37 @@
 	      	</ul>
 	      
         <div class="subheading mb-3">Language</div>
-        	<ul class="fa-ul mb-0">
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Python
-	          	</li>
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Java
-	          	</li>	          	
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	C++
-	          	</li>
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	C
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	SQL
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	JavaScript
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	HTML
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	CSS
-	          	</li>
-	      	</ul>
+	    <p class="lead mb-5"  style="text-align: justify;"> Python &#x25cf; 
+		Java &#x25cf;
+		C++ &#x25cf;
+		C &#x25cf;
+		SQL &#x25cf;
+		JavaScript &#x25cf;
+		HTML &#x25cf;
+		CSS
+	    </p>
 
         <div class="subheading mb-3">Library</div>
-        	<ul class="fa-ul mb-0">
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Pytorch
-	          	</li>
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Keras
-	          	</li>	          		          	
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Pandas
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Scikit-learn
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	OpenCV
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Apache Spark MLlib
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Seaborn
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Flask
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	D3.js
-	          	</li>
-	      	</ul>
+	    <p class="lead mb-5"  style="text-align: justify;"> Pytorch &#x25cf; 
+		Keras &#x25cf;
+		Pandas &#x25cf;
+		Scikit-learn &#x25cf;
+		OpenCV &#x25cf;
+		Apache Spark MLlib &#x25cf;
+		Seaborn &#x25cf;
+		Flask &#x25cf;
+		D3.js
+	    </p>
+	      
 	<div class="subheading mb-3">Technology</div>
-        	<ul class="fa-ul mb-0">
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Google Cloud Platform (GCP)
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Microsoft Azure
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Docker
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Apache Spark
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Tableau
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Matlab
-	          	</li>
-			<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	ClickUp
-	          	</li>
-	      	</ul>
+	    <p class="lead mb-5"  style="text-align: justify;"> Google Cloud Platform (GCP) &#x25cf; 
+		Microsoft Azure &#x25cf;
+		Docker &#x25cf;
+		Apache Spark &#x25cf;
+		Tableau &#x25cf;
+		Matlab &#x25cf;
+		ClickUp
+	    </p>
 
         <!--
         <ul class="list-inline dev-icons">
