--- a/index.html
+++ b/index.html
@@ -231,32 +231,26 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Research</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &#x25cf; 
-		Contour Detection &#x25cf;
-		Object Localization &#x25cf;
-		Semantic Image Segmentation &#x25cf;
-		Unsupervised Learning &#x25cf;
+	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &#x2219;
+		Contour Detection &#x2219;
+		Object Localization &#x2219;
+		Semantic Image Segmentation &#x2219;
+		Unsupervised Learning &#x2219;
 		Time-Series Analysis
 	    </p>
 
 	<div class="subheading mb-3">Version Control</div>
 	    <p class="lead mb-5"  style="text-align: justify;"> Git 
 	    </p>
-        	<ul class="fa-ul mb-0">
-	          	<li>
-	            	<i class="fa-li fa fa-check"></i>
-	            	Git
-	          	</li>     		
-	      	</ul>
 	      
         <div class="subheading mb-3">Language</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Python &#x25cf; 
-		Java &#x25cf;
-		C++ &#x25cf;
-		C &#x25cf;
-		SQL &#x25cf;
-		JavaScript &#x25cf;
-		HTML &#x25cf;
+	    <p class="lead mb-5"  style="text-align: justify;"> Python &#x2219;
+		Java &#x2219;
+		C++ &#x2219;
+		C &#x2219;
+		SQL &#x2219;
+		JavaScript &#x2219;
+		HTML &#x2219;
 		CSS
 	    </p>
 
