--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Research</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &#x2219;
-		Contour Detection &#x2219;
-		Object Localization &#x2219;
-		Semantic Image Segmentation &#x2219;
-		Unsupervised Learning &#x2219;
+	    <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &bull;
+		Contour Detection &bull;
+		Object Localization &bull;
+		Semantic Image Segmentation &bull;
+		Unsupervised Learning &bull;
 		Time-Series Analysis
 	    </p>
 
@@ -244,35 +244,35 @@
 	    </p>
 	      
         <div class="subheading mb-3">Language</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Python &#x2219;
-		Java &#x2219;
-		C++ &#x2219;
-		C &#x2219;
-		SQL &#x2219;
-		JavaScript &#x2219;
-		HTML &#x2219;
+	    <p class="lead mb-5"  style="text-align: justify;"> Python &bull;
+		Java &bull;
+		C++ &bull;
+		C &bull;
+		SQL &bull;
+		JavaScript &bull;
+		HTML &bull;
 		CSS
 	    </p>
 
         <div class="subheading mb-3">Library</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Pytorch &#x25cf; 
-		Keras &#x25cf;
-		Pandas &#x25cf;
-		Scikit-learn &#x25cf;
-		OpenCV &#x25cf;
-		Apache Spark MLlib &#x25cf;
-		Seaborn &#x25cf;
-		Flask &#x25cf;
+	    <p class="lead mb-5"  style="text-align: justify;"> Pytorch &bull;
+		Keras &bull;
+		Pandas &bull;
+		Scikit-learn &bull;
+		OpenCV &bull;
+		Apache Spark MLlib &bull;
+		Seaborn &bull;
+		Flask &bull;
 		D3.js
 	    </p>
 	      
 	<div class="subheading mb-3">Technology</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Google Cloud Platform (GCP) &#x25cf; 
-		Microsoft Azure &#x25cf;
-		Docker &#x25cf;
-		Apache Spark &#x25cf;
-		Tableau &#x25cf;
-		Matlab &#x25cf;
+	    <p class="lead mb-5"  style="text-align: justify;"> Google Cloud Platform (GCP) &bull;
+		Microsoft Azure &bull;
+		Docker &bull;
+		Apache Spark &bull;
+		Tableau &bull;
+		Matlab &bull;
 		ClickUp
 	    </p>
 
