--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <h3 class="mb-0">PhD</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
 		  <div>Computer Science</div>
-		  <div>Dissertation: <em>"Domain Adaptation in Unconstrained Label Spaces."</em></div>
+		  <div><em>Dissertation: "Domain Adaptation in Unconstrained Label Spaces."</em></div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - May 2023 [Tentative]</span>
@@ -203,7 +203,7 @@
             <h3 class="mb-0">Masters in Engineering</h3>
             <div class="subheading mb-3">Jadavpur University, India</div>
 		  <div>Computer Science and Engineering</div>
-		  <div>Thesis: <em>"A Quality-Concordance Measure-Based Approach to Edge Detection."</em></div>
+		  <div><em>Thesis: "A Quality-Concordance Measure-Based Approach to Edge Detection."</em></div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - June 2015</span>
