--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">PhD</h3>
+            <h3 class="mb-0">Ph.D.</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-		  <div>Computer Science</div>
+		  <div>COMPUTER SCIENCE</div>
 		  <div><em>Dissertation: "Domain Adaptation in Unconstrained Label Spaces."</em></div>
           </div>
           <div class="resume-date text-md-right">
@@ -200,9 +200,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Masters in Engineering</h3>
+            <h3 class="mb-0">Masters</h3>
             <div class="subheading mb-3">Jadavpur University, India</div>
-		  <div>Computer Science and Engineering</div>
+		  <div>COMPUTER SCIENCE &#38; ENGINEERING</div>
 		  <div><em>Thesis: "A Quality-Concordance Measure-Based Approach to Edge Detection."</em></div>
           </div>
           <div class="resume-date text-md-right">
@@ -212,9 +212,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Bachelor of Technology</h3>
+            <h3 class="mb-0">BACHELORS</h3>
             <div class="subheading mb-3">West Bengal University of Technology, India</div>
-            <div>Computer Science and Engineering</div>
+            <div>COMPUTER SCIENCE &#38; ENGINEERING</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2009 - July 2013</span>
