--- a/index.html
+++ b/index.html
@@ -324,28 +324,15 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Research Interests</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Partial Domain Adaptation</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Source-Free Domain Adaptation</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Closed-Set Domain Adaptation</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Contour Detection</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Semantic Segmentation</li> 
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Time-Series Analysis</li>              
-            
-        </ul>          
+        <h2 class="mb-5">Awards &#38; Services</h2>
+        <ul>	  
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Servedas theWebchair forthe InternationalWorkshop onNetwork Science forQuantumCommunicationNetworks,2022(NETSCIQCOM -INFOCOM). Duties involved designing, updating, and stress-testing the conference website, managing submissions, providing tech support, and reviewing workshop live streams.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Recipient of the Engineering Graduate Fellowship for“strong academic work and research progress.”</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Recipient of the Department Travel Grants.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Co-wrote proposals and was awarded AHCCCS Research Grant forthe Arizona State Opioid Response Data Project.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Teaching and Research Awards reviewer forthe Graduate and Professional Student Association at Arizona State University.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Top 0.5% of 0.25 million applicants who took the 2013 Graduate Aptitude Test in Engineering (GATE-2013) in Computer Science (conducted by the Indian Ministry of Human Resource Department).</il>
+	</ul>      
       </div>
     </section>
 
