--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       <div class="w-100">
         <h2 class="mb-5">Awards &#38; Services</h2>
         <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Servedas theWebchair forthe InternationalWorkshop onNetwork Science forQuantumCommunicationNetworks,2022(NETSCIQCOM -INFOCOM). Duties involved designing, updating, and stress-testing the conference website, managing submissions, providing tech support, and reviewing workshop live streams.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the Webchair for the International Workshop on Network Science for Quantum Communication Networks, 2022 (NETSCIQCOM - INFOCOM). Duties involved designing, updating, and stress-testing the conference website, managing submissions, providing tech support, and reviewing workshop live streams.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Recipient of the Engineering Graduate Fellowship for“strong academic work and research progress.”</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Recipient of the Department Travel Grants.</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Co-wrote proposals and was awarded AHCCCS Research Grant forthe Arizona State Opioid Response Data Project.</il>
