--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Research Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Awards &#38; Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
