--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a Ph.D. student majoring in Computer Science at Arizona State University, and a member of the NetXT research Lab. With a demonstrated history of working in Computer Vision, Image Processing, and Machine Learning, my current research interest is primarily focused on a realistic Domain Adaptation scenario for image classification with different degrees of shared label space assumptions between domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a Ph.D. researcher at Arizona State University, working with Dr. Arunabha Sen in the NetXT Lab. With a demonstrated history of working in Computer Vision, Image Processing, and Machine Learning, my current research interest is primarily focused on a realistic Domain Adaptation scenario for image classification with different degrees of shared label space assumptions between domains.</p>
 
         <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
