--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
         </li>
 	<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#coursework">Relevant Coursework</a>
+          <a class="nav-link js-scroll-trigger" href="#coursework">Coursework</a>
         </li>
 	<li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#cv">CV</a>
@@ -395,7 +395,7 @@
           <div class="resume-content">
             <h3 class="mb-0">DOMAIN ADAPTATION FRAMEWORKS</h3>
             <div class="subheading mb-3"></div>
-		  <div>Developed frameworks for image classification tasks under a domain adaptation setup, with constrained and unconstrained label-space
+		  <div style="text-align: justify;">Developed frameworks for image classification tasks under a domain adaptation setup, with constrained and unconstrained label-space
                        assumptions between the source and target domains (closed-set, partial and open-set scenarios). Built adaptation models for tasks
                        where access to source data is prohibited during the adaptation process (source-free scenario). Developed generative models for image to-image translation and data augmentation tasks.
 		  </div>
@@ -409,7 +409,7 @@
           <div class="resume-content">
             <h3 class="mb-0">OBJECT LOCALIZATION</h3>
             <div class="subheading mb-3"></div>
-		  <div>Formulated an approach for object localization and semantic image segmentation in natural scenes, using image super-pixelization and
+		  <div style="text-align: justify;">Formulated an approach for object localization and semantic image segmentation in natural scenes, using image super-pixelization and
                        deep supervised classification. Context-based information is captured through patches formed by the first and second neighbors superpixels 
 		       (atomic units of an image formed by a perceptual grouping of pixels). These are then mapped to the corresponding object labels
                        using deep classifier networks. A consensus-based labeling strategy is subsequently employed by ensembling the output probabilities
@@ -426,7 +426,7 @@
           <div class="resume-content">
             <h3 class="mb-0">DEEPVID++</h3>
             <div class="subheading mb-3"></div>
-            <div>The reliability of a deep-learningmodel is majorly dependent on the interpretability of its internal operations. Citing this,the DeepVID
+            <div style="text-align: justify;">The reliability of a deep-learningmodel is majorly dependent on the interpretability of its internal operations. Citing this,the DeepVID
                  framework is improved to train a basic network using a complex deep-neural model such that its behavior is visually interpretable.
                  This is accomplished by utilizing variational information to generate neighbors around data instances and training a linear network to
                  replicate the complex network’s behavior on the generated samples through knowledge distillation.
@@ -441,7 +441,7 @@
           <div class="resume-content">
             <h3 class="mb-0">POLYP SEGMENTATION </h3>
             <div class="subheading mb-3"></div>
-            <div>Developed a polyp segmentation framework by coupling deep-siamese networks with a clustering policy using balanced entropy-based
+            <div style="text-align: justify;">Developed a polyp segmentation framework by coupling deep-siamese networks with a clustering policy using balanced entropy-based
                  random walks to identify informative frames from optical colonoscopic video sequences and segment out existing polyps (precursors
                  to colon cancer).
 	    </div>
@@ -455,7 +455,7 @@
           <div class="resume-content">
             <h3 class="mb-0">SEMANTIC CONTOUR DETECTION</h3>
             <div class="subheading mb-3"></div>
-            <div>A multi-scale feature-based contour detection approach is presented here from a game-theoretic standpoint. A mixed strategy Nash
+            <div style="text-align: justify;">A multi-scale feature-based contour detection approach is presented here from a game-theoretic standpoint. A mixed strategy Nash
                  Equilibrium is searched in a two-player game (texture and color-based feature extractors acting as players, with strategies involving
                  extraction at different scales). The objective centers around finding a weighted balance ofthese strategies to minimize the false positives
                  (highlighting spurious edges) and false negatives (missing salient contours).
