--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
       <div class="w-100">
-        <h2 class="mb-5">Relevant Publications</h2>
+        <h2 class="mb-5">Publications</h2>
         <ul class="fa-ul mb-0">
           <li style="text-align: justify;">
 	    <i class="fa-li fa fa-check"></i>	  
