--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <a class="nav-link js-scroll-trigger" href="#coursework">Coursework</a>
         </li>
 	<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="https://github.com/S-Choudhuri/S-Choudhuri.github.io/blob/master/CV_Sandipan_Choudhuri.pdf">CV</a>
+          <a class="nav-link js-scroll-trigger" href="https:S-Choudhuri.github.io/CV_Sandipan_Choudhuri.pdf">CV</a>
         </li>
       </ul>
     </div>
