--- a/index.html
+++ b/index.html
@@ -350,41 +350,16 @@
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
-      <div class="w-100">
-        <h2 class="mb-5">Publications</h2>
-        <ul class="fa-ul mb-0">
-          <li style="text-align: justify;">
-	    <i class="fa-li fa fa-check"></i>	  
-		  Choudhuri, Sandipan, Riti Paul, Arunabha Sen, Baoxin Li, and Hemanth Venkateswara. "Partial Domain Adaptation Using Selective Representation Learning For Class-Weight Computation.".
-          <li>
-          <li style="text-align: justify;">
-            <i class="fa-li fa fa-check"></i>
-			Choudhuri, Sandipan, Kaustav Basu, and Arunabha Sen. "User Satisfaction-Driven Bandwidth Allocation for Image Transmission in a Crowded Environment." arXiv preprint arXiv:1802.09079 (2018).</li>
-          <li>
-          <li style="text-align: justify;">
-            <i class="fa-li fa fa-check"></i>
-            Choudhuri, Sandipan, Nibaran Das, Ritesh Sarkhel, and Mita Nasipuri. "Object Localization on Natural Scenes: A Survey." International Journal of Pattern Recognition and Artificial Intelligence 32, no. 02 (2018): 1855001.</li>
-          <li>
-		  <li style="text-align: justify;">
-            <i class="fa-li fa fa-check"></i>
-            Choudhuri, Sandipan, Nibaran Das, and Mita Nasipuri. "A Quality-Concordance Metric Based Contour Detection by Utilizing Composite-Cue Information and Particle Swarm Optimisation." In Proceedings of the 5th International Conference on Frontiers in Intelligent Computing: Theory and Applications, pp. 641-651. Springer, Singapore, 2017.</li>
-          <li>
-          <li style="text-align: justify;">
-            <i class="fa-li fa fa-check"></i>
-            Choudhuri, Sandipan, Nibaran Das, Swarnendu Ghosh, and Mita Nasipuri. "A multi-cue information based approach to contour detection by utilizing superpixel segmentation." In 2016 International Conference on Advances in Computing, Communications and Informatics (ICACCI), pp. 1057-1063. IEEE, 2016.
-		  </li>   
-		  <li style="text-align: justify;">       	
-            <i class="fa-li fa fa-check"></i>
-            Das, Aritra, Swarnendu Ghosh, Ritesh Sarkhel, Sandipan Choudhuri, Nibaran Das, and Mita Nasipuri. "Combining Multilevel Contexts of Superpixel Using Convolutional Neural Networks to Perform Natural Scene Labeling." In Recent Developments in Machine Learning and Data Analytics, pp. 297-306. Springer, Singapore, 2019.</li>
-            
-		  <li style="text-align: justify;">       	
-            <i class="fa-li fa fa-check"></i>
-			Basu, Kaustav, Sandipan Choudhuri, Arunabha Sen, and Aniket Majumdar. "Insights from Statistical Analysis of Opioid Data." arXiv preprint arXiv:1805.05509 (2018).</li>
-        </ul> 
-      </div>
+	<div class='row'>
+	    <div class="col-md-2">
+	      <h3>ASILOMAR, 2022</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Domain-Invariant Feature Alignment Using Variational Inference For Partial Domain Adaptation</strong></p>
+	      <p><em>S.Choudhuri, S. Adeniye, H Venkateswara, A.Sen</em></p>
+	    </div>
+	</div>
     </section>
-
-  </div>
 
   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
