--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
 	<div class='row'>
 	    <div class="col-md-2">
-	      <h3>ASILOMAR, 2022</h3>
+	      <h3 style="font-size:10vw">ASILOMAR, 2022</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Domain-Invariant Feature Alignment Using Variational Inference For Partial Domain Adaptation</strong></p>
