--- a/index.html
+++ b/index.html
@@ -352,12 +352,96 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
 	<div class='row'>
 	    <div class="col-md-2">
-	      <h3 style="font-size:1vw">ASILOMAR, 2022</h3>
+	      <h3 style="font-size:2vw">ASILOMAR, 2022</h3>
 	    </div>
 	    <div class="col-md-10">
 	      <p style="font-size:large;"><strong>Domain-Invariant Feature Alignment Using Variational Inference For Partial Domain Adaptation</strong></p>
 	      <p><em>S.Choudhuri, S. Adeniye, H Venkateswara, A.Sen</em></p>
 	    </div>
+		
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">AdvML@KDD, 2022</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Coupling Adversarial Learning with Selective Voting Strategy for Distribution Alignment in Partial Domain
+						Adaptation</strong></p>
+	      <p><em>S.Choudhuri, H Venkateswara, A. Sen</em></p>
+	    </div>
+
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">GLOBECOM, 2021</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Optimal Cost Network Design for Bounded Delay Data Transfer from PMU to Control Center</strong></p>
+	      <p><em>A. Sen, S. Roy, K. Basu, S. Adeniye, S. Choudhuri, A. Pal</em></p>
+	    </div>
+		
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">DRCN, 2020</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Structural Dependency Aware Service Chain Mapping for Network Function Virtualization</strong></p>
+	      <p><em>S.Choudhuri, S. Adeniye, H Venkateswara, A.Sen</em></p>
+	    </div>
+		
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">ASILOMAR, 2020</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Partial Domain Adaptation Using Selective Representation Learning For Class-Weight Computation</strong></p>
+	      <p><em>S.Choudhuri*, R. Paul*, A.Sen, B.Li, H Venkateswara</em></p>
+	    </div>
+	
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">RMLDA, 2019</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Combining Multilevel Contexts of Superpixel using Convolutional Neural Networks to Perform Natural
+						Scene Labeling</strong></p>
+	      <p><em>A Das, S Ghosh, R Sarkhel, S Choudhuri, N Das, M Nasipuri</em></p>
+	    </div>
+
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">epiDAMIK@KDD, 2018</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Identification of At-Risk Groups for Opioid Addiction Through Web Data Analysis</strong></p>
+	      <p><em>K Basu, S Choudhuri, A Sen, A Majumdar, D Dey</em></p>
+	    </div>
+	
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">MMTC, 2018</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>User Satisfaction-Driven Bandwidth Allocation for Image Transmission in a Crowded Environment</strong></p>
+	      <p><em>S Choudhuri, K Basu, A Sen</em></p>
+	    </div>
+
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">IJPRAI, 2018</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Object Localization on Natural Scenes: A Survey</strong></p>
+	      <p><em>S Choudhuri, N Das, R Sarkhel, M Nasipuri</em></p>
+	    </div>
+
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">FICTA, 2017</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>A Quality-Concordance Metric Based Contour Detection by Utilizing Composite-Cue Information and
+						Particle Swarm Optimisation</strong></p>
+	      <p><em>S Choudhuri, N Das, M Nasipuri</em></p>
+	    </div>
+		
+	    <div class="col-md-2">
+	      <h3 style="font-size:2vw">ICACCI, 2016</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>A Multi-Cue Information Based Approach to Contour Detection by Utilizing Superpixel Segmentation</strong></p>
+	      <p><em>S Choudhuri, N Das, S Ghosh, M Nasipuri</em></p>
+	    </div>
+		
 	</div>
     </section>
 
